--- a/app/views/misc/home.html.slim
+++ b/app/views/misc/home.html.slim
@@ -4,7 +4,7 @@ p
   a href="#{login_path(:twitter)}" Twitter
 
 - if current_user
-  p
-    a href="#{misc_say_path}" 進捗ダメです
+  = form_tag users_say_path do |f|
+    = submit_tag '進捗ダメです'
   p
     a href="#{logout_path}" Log out
