--- a/app/views/misc/home.html.slim
+++ b/app/views/misc/home.html.slim
@@ -5,7 +5,7 @@ h1 進捗ダメです
     a href="#{logout_path}" ログアウト
 - else
   p
-    a href="#{login_path(:twitter)}" Twitterでログイン
+    a.js-login href="#{login_path(:twitter)}" Twitterでログイン
 
 = form_tag users_say_path do |f|
   = submit_tag '進捗ダメですと言う', disabled: !current_user
