give an example

--- a/app/views/misc/home.html.slim
+++ b/app/views/misc/home.html.slim
@@ -9,3 +9,6 @@ h1 進捗ダメです
 
 = form_tag users_say_path do |f|
   = submit_tag '進捗ダメですと言う', disabled: !current_user
+
+p
+  a href="https://twitter.com/ginpei_jp/status/693875435994771456" 進捗ダメですと言った例
